--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "pteeasyfiller",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "This is a filler for PTE's created at CIRC.",
   "main": "main.js",
   "dependencies": {
+    "@types/readline-sync": "^1.4.3",
     "readline": "^1.3.0",
     "readline-sync": "^1.4.10"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/node": "^14.0.1",
+    "typescript": "^3.9.2"
+  },
   "scripts": {
-    "test": "node main.js"
+    "test": "node dist/main.js",
+    "tsc:w": "tsc -w"
   },
   "repository": {
     "type": "git",
